policies/gatekeeper/constraints/required-container-security.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredContainerSecurity
metadata:
  name: voting-required-container-security
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - voting
